add xml Suite, update driver to LocalThread (#1722)